# genacademy-coach

./: .dockerignore  .env_example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
corpus/: .gitignore  README.md
docs/: INDEX.md  agent-concepts-from-genacademy-coach.md  agentic-orchestration-improvement-review.md  architecture-diagrams.md  architecture.md  build-learnings.md  citation-provenance-audit-current-main-r3-20260624.json  coach-v2-redesign-adversarial-review.md  coach-v2-redesign-second-review.md  coach-v2-tutor-workspace-review.md  coach-v2-week1-prd.md  decisions.md  demo-and-deliverables.md  demo-walkthrough-with-screenshots.docx  foundation-adapter-spec.md  genacademy-rag-foundation.md  grading-gap-audit.md  hugging-face-deployment-plan.md  linkedin-agentic-ai-series-plan.md  open-decisions-handoff.md  post-v1-eval-provenance-learning.md  pr54-bounded-turn2-recovery-learning.md  production-roadmap.md  submission-google-doc-draft.md  submission-hardening-plan.md  submission-packaging-item.md  teach-loop-retrieval-triage.md  teach-loop-status.md  teach-loop-threshold-calibration.md  two-day-score-lift-plan.md  ui-screenshot-inventory.md  vibe-coding-prompt-appendix.md  video-demo-script.md  week4-eval-dashboard-data.json  week4-eval-dashboard.html  week4-eval-plan.md  week4-eval-progress-handoff.md  week4-latency-and-failure-fix-plan.md
eval/: non_private_negative_controls.json  split_manifest.json
scripts/: __init__.py  audit_citation_provenance.py  build_week4_eval_dashboard.py  calibrate_teach_threshold.py  capture_pr22_ui_screenshots.cjs  check_eval_leak.py  check_memory_leak.py  deploy_hf_space.py  diagnose_teach_retrieval.py  eval_teach_loop.py  ingest_course_corpus.py  print_trace.py  run_golden_eval.py  run_memory_demo.py  run_quiz_demo.py  (+5 more)
(+99 files in other folders)
