[project]
name = "genacademy-coach"
version = "0.1.0"
description = "Adaptive grounded tutor over Gen Academy course materials"
requires-python = ">=3.12"
dependencies = [
    "genacademy-rag",
    "langchain>=1.1",
    "langchain-openai>=1.0",
    "pydantic>=2",
    "python-docx",
    "python-pptx",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv.sources]
genacademy-rag = { path = "../../Week2-RAG_ContextEngineering/genacademy-rag", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
